--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 thiserror = "1"
+color-eyre = { version = "0.5", default-features = false }
 
 [dev-dependencies]
 criterion = "0.3"
