--- a/aftermath_cfparser/Cargo.toml
+++ b/aftermath_cfparser/Cargo.toml
@@ -3,15 +3,6 @@ name = "aftermath"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+mimalloc = "0.1.29"
 thiserror = "1"
-color-eyre = { version = "0.5", default-features = false }
-
-[dev-dependencies]
-criterion = "0.3"
-
-[[bench]]
-name = "parser"
-harness = false
