--- a/aftermath_class_loader/Cargo.toml
+++ b/aftermath_class_loader/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
+glob = "0.3.0"
+thiserror = "1.0.31"
+
+[dependencies.zip]
+version = "0.6.2"
+features = ["deflate"]
