--- a/aftermath_libjimage_bind/CMakeLists.txt
+++ b/aftermath_libjimage_bind/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.22)
 PROJECT(aftermath_libjimage_bind)
 INCLUDE_DIRECTORIES($ENV{JAVA_HOME}/include/ include/)
 
-IF (NOT DEFINED $ENV{JAVA_HOME})
+IF (NOT DEFINED ENV{JAVA_HOME})
     message(FATAL_ERROR "JAVA_HOME does not exist, please set it. Exiting.")
 endif()
 
@@ -13,7 +13,7 @@ IF (APPLE)
 elseif(WIN32)
     message("Detected Windows, adding JAVA_HOME/include/win32 to include path.")
     INCLUDE_DIRECTORIES($ENV{JAVA_HOME}/include/win32/)
-elseif()
+else()
     message("Detected neither MacOS or Windows, adding JAVA_HOME/include/linux/ to include path.")
     INCLUDE_DIRECTORIES($ENV{JAVA_HOME}/include/linux/)
 endif()
